tests/NormalTests/paczka1/small_fuzzy/11324924.err
Error in line 1: cj2V S845 83,9
Error in line 8: A1R A237 15,5
